--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <script src="./bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
 </body>
 
 </html>
